<resources>
    <string name="app_name">SecretNote</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>
    <string name="account_balance">Account Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="spend_frequency">Spend Frequency</string>
    <string name="see_all">See All</string>
</resources>