<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:iconTint="@drawable/bottom_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/Search"
        android:icon="@drawable/ic_transaction"
        android:iconTint="@drawable/bottom_selector"
        android:title="@string/transactions" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/Profile"
        android:icon="@drawable/ic_pie_chart"
        android:iconTint="@drawable/bottom_selector"
        android:title="@string/budget" />

    <item
        android:id="@+id/Settings"
        android:icon="@drawable/ic_user"
        android:iconTint="@drawable/bottom_selector"
        android:title="@string/profile" />
</menu>